--- a/mp_miniproject/README
+++ b/mp_miniproject/README
@@ -1,18 +1,58 @@
-This is your final *evaluative* assignment.
-As before, that means that we want you to show
-us what you know/what you can do (as opposed to 
-most assignments, which are to practice and learn from).
+Your final programming assignment is the "mini-project."
+For this assignment, you have may choose from two different
+options. You only need to choose ONE of these options (do
+NOT do both of them). Each mini-project option has
+115% possible credit on it, divided among four steps as follows:
 
-Accordingly, you may not work with anyone else on this
-assignment.  All work must be your own. 
+Step 1: 50%
+Step 2: 30%
+Step 3: 20%
+Step 4: 15%
 
-To proceed, run
+This mini-project is due at 5:00 pm eastern time on Wednesday April 25,
+giving you 3 weeks to work on it.
 
-honor-statement mp_miniproject
+For either options, you may need to consult other materials
+for relevant domain knowledge. However, you should have developed the
+programming skills to complete the project in this course. 
 
-which will present you with the rules for this assignment,
-ask you questions to make sure you understand,
-and ask you to sign the honor statement.
+Your mini-project options are:
 
-Once you have done that, your directory will be
-refreshed with the actual assignment.
+ (1) A command shell
+     You will need to consult man pages about system calls to do this.
+     This option is great preparation if you plan to take ECE 650.
+ (2) Numerical methods
+     You will need some mathematical knowledge to do this.
+     You will also need to perform simple parsing; however, you
+     can use the code I gave you in 081 to show you how to do so.
+     This option is great preparation if you plan to take ECE 681.
+
+I expect these to be polished, well-tested pieces of code.
+
+For this project, YOU will tell ME how to test your code. You MUST
+include a file called TESTING.txt. In this file, you should give me
+step-by-step instructions to see that your code follows the
+specifications of the README. For example, you might say:
+
+(1) Run ./myprogram < testcases/input1.txt
+    You will see that it prints xyz, which is correct because [reasons]
+(2) Run ./myprogram < testcases/input2.txt
+    You will see that it prints xyz, which is correct because [reasons]
+
+If I am satisfied that your test cases are sufficient, I will not make any more
+of my own, and you will receive full credit for adequate testing. If I am
+not satisfied with your testcases, I will add more testcases of my own,
+and you will lose points for test coverage.
+
+We do not usually grade you on code quality; however, on this assignment
+we will, so you will want to review TA and instructor comments from your
+previous evaluative assignments.
+
+We expect your code to 
+  - Be adequately commented
+  - Make good use of abstraction (both in terms of functions and classes)
+  - Be well-formatted and easy to read
+  - Use good variable names. If I see a variable called "flag" (or anything
+    like that), I guarantee you will lose points here.
+
+As always, you should perform good error checking and valgrind cleanly.
